--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 
   margin: 3% 5%;
   padding: 4%;
-  background: black;
+  background: rgb(116, 11, 235);
   color: white;
   box-shadow: 0 4px 8px 0
    rgba(0, 0, 0, 0.2),
@@ -38,7 +38,9 @@
 
 .intro-div img {
 
-  max-width: 50vw;
+  max-width: 40vw;
+  border: 3px solid #333333;
+  border-radius: 2% 6% 5% 4% / 1% 1% 2% 4%;
 }
 
 .skills-div {
